fix overflow-x to hidden on mobile version

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -103,7 +103,7 @@
       display: none;
       background-color: rgba(0, 0, 0, 0.364);
       width: 100vw;
-      height: 186vh;
+      height: 100vh;
       position: absolute;
       top: 0;
       left: 0;
