--- a/styles/index.scss
+++ b/styles/index.scss
@@ -35,5 +35,7 @@ body {
 @media screen and (max-width: 1150px) {
   body {
     padding: 3em 1.2em;
+    width: 100vw;
+    overflow-x: hidden;
   }
 }
